--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -158,20 +158,22 @@
   margin-top: 1rem;
 }
 
-.HomePage .MainPage .ClientTasks {
+.HomePage .ClientTasks {
+  width:100%;
+  height:100%;
   display: flex;
+  justify-content: center;
   align-items: center;
-  background-color: #dedede;
-  margin: 2rem 2rem 0rem 17rem;
+  background-color: aqua;
 }
 
-.top-nav div {
+.HomePage .ClientTasks .top-nav div {
   width: 8rem;
   line-height: 3rem;
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} 
 
 .top-nav a {
   text-decoration: none;
