--- a/src/styles/freelancer.css
+++ b/src/styles/freelancer.css
@@ -321,8 +321,75 @@
 
 .acceptedTasks .taskInfo {
   background-color: whitesmoke;
+  display: none;
 }
 
 .acceptedTasks .taskInfo section {
   margin: 0.5rem;
+}
+
+/* Pop-UPs styling */
+
+.freelanceDashBoard
+  .mainContent
+  .freelanceProfile
+  .briefDetails
+  .block1
+  .deletePopUp {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  position: absolute;
+}
+
+.freelanceDashBoard
+  .mainContent
+  .freelanceProfile
+  .briefDetails
+  .block1
+  .deletePopUp
+  form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  background-color: white;
+  margin-left: 12rem;
+  width: 20rem;
+  height: 10rem;
+  border-radius: 8px;
+  box-shadow: 1px 1px 4px 1px #111;
+}
+
+.freelanceDashBoard
+  .mainContent
+  .freelanceProfile
+  .briefDetails
+  .block1
+  .deletePopUp
+  form
+  button {
+  width: 5rem;
+  height: 2rem;
+  background-color: tomato;
+  border: 1px solid black;
+}
+
+.freelanceDashBoard
+  .mainContent
+  .freelanceProfile
+  .briefDetails
+  .block1
+  .deletePopUp
+  form
+  .cancel {
+  width: 5rem;
+  height: 2rem;
+  background-color: transparent;
+  border: 1px solid black;
 }
