--- a/src/styles/freelancer.css
+++ b/src/styles/freelancer.css
@@ -349,8 +349,8 @@
   position: absolute;
   background-color: white;
   margin-left: 12rem;
-  width: 20rem;
-  height: 10rem;
+  width: 25rem;
+  height: 15rem;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   border-radius: 8px;
   box-shadow: 1px 1px 4px 1px #111;
@@ -359,7 +359,7 @@
 .PopUp form button {
   width: 6rem;
   line-height: 1.5rem;
-  color: tomato;
+  color: black;
   font-weight: 600;
   font-size: 1rem;
   background-color: transparent;
@@ -371,7 +371,29 @@
 }
 
 .PopUp form button:hover {
-  background-color: rgb(255, 224, 219);
+  background-color: black;
+  color: white;
+}
+
+.PopUp form #confirmation {
+  width: 6rem;
+  line-height: 1.5rem;
+  color: black;
+  font-weight: 600;
+  font-size: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+  cursor: pointer;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  border: 1px solid black;
+  border-radius: 8px;
+}
+
+.PopUp form #confirmation:hover {
+  background-color: black;
+  color: white;
 }
 
 .PopUp form .cancel {
@@ -380,5 +402,17 @@
 }
 
 .PopUp form .cancel:hover {
+  background-color: rgb(198, 198, 198);
+}
+
+.PopUp form #cancel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  border: 1px solid black;
+}
+
+.PopUp form #cancel:hover {
   background-color: rgb(198, 198, 198);
 }
