--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -6,8 +6,6 @@
   position: fixed;
   overflow: auto;
   background-color: whitesmoke;
-  background-color: black;
-  background-color: #020202;
 }
 
 .HomePage .topNav {
@@ -18,8 +16,6 @@
   align-items: center;
   position: fixed;
   background-color: #ededed;
-  background-color: black;
-  background-color: #020202;
 }
 
 .HomePage .topNav .left {
@@ -104,7 +100,7 @@
 
 .HomePage .MainPage .searchBar fieldset input {
   width: 100%;
-  height:2.5rem;
+  height: 2.5rem;
   padding: 0.5rem;
   border-top-left-radius: 8px;
   border-bottom-left-radius: 8px;
@@ -114,10 +110,10 @@
 
 .HomePage .MainPage .searchBar fieldset button {
   width: 5rem;
-  height:2.5rem;
+  height: 2.5rem;
   background-color: #111;
-  
-  color:#fdfdfd;
+
+  color: #fdfdfd;
   border: none;
   border-top-right-radius: 8px;
   border-bottom-right-radius: 8px;
@@ -127,69 +123,124 @@
   width: 100%;
   height: 100%;
   display: flex;
-  overflow: scroll;
-  margin-top:2rem;
-  margin-bottom: 9rem;
+  overflow: hidden;
+  margin-top: 2rem;
+  margin-bottom: 10rem;
   background-color: whitesmoke;
-  background-color: #020202;
   position: relative;
+  overflow: scroll;
 }
 
-.HomePage .MainPage .freelancersDisplay .row{
-  width:100%;
-  height:20rem;
+.HomePage .MainPage .freelancersDisplay .row {
+  width: 100%;
+  height: 25rem;
+  background-color: chartreuse;
   display: flex;
   flex-wrap: wrap;
-  flex-grow: 5;
   align-items: center;
 }
 
-
 .HomePage .MainPage .freelancerData {
-  width: 15rem;
-  height: 18rem;
+  width: 40rem;
+  height: 20rem;
   padding: 0.7rem;
-  margin: 2rem;
+  margin: 3rem;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   border: 1px solid white;
   border-radius: 8px;
-  color:white;
+  color: white;
+  -background-color: white;
+  box-shadow: 1px 1px 6px 1px #eee;
+  transition: 0.8s all;
+}
+
+.HomePage .MainPage .freelancerDataModify {
+  width: 20rem;
+  height: 15rem;
+  padding: 0.7rem;
+  margin: 3rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 1px solid white;
+  border-radius: 8px;
+  color: white;
   -background-color: white;
   box-shadow: 1px 1px 6px 1px #eee;
 }
 
+.HomePage .MainPage .freelancerData .inner-freelancerData {
+  width: 80%;
+  height: 100%;
+}
+
 .HomePage .MainPage .freelancerData .lancerDetails {
   width: 100%;
+  height: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  align-items: center;
+  background-color: aqua;
+}
+
+.HomePage .MainPage .freelancerDataModify .lancerDetails {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: aqua;
 }
 
 .HomePage .MainPage .freelancerData .lancerDetails img {
+  width: 150px;
+  height: 150px;
+  border: 1px solid black;
+  margin: auto;
+  margin-left: 2rem;
+  margin-top: 1rem;
+}
+
+.HomePage .MainPage .freelancerDataModify .lancerDetailsModify img {
   width: 80px;
   height: 80px;
   border: 1px solid black;
   margin: auto;
+  margin-left: 2rem;
   margin-top: 1rem;
 }
 
 .HomePage .ClientTasks {
-  width:100%;
-  height:100%;
-  margin-top:7rem;
-  background-color: #020202;
-  display:flex;
-  flex-direction:column;
+  width: 100%;
+  height: 100%;
+  margin-top: 7rem;
+  display: flex;
+  background-color: aqua;
 }
 
-.HomePage .ClientTasks .top-nav{
-  display:flex;
-  width:12rem;
-  height:100%;
+.HomePage .ClientTasks .top-nav {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  position: fixed;
 }
 
-.HomePage .ClientTasks .top-nav .navigations {
+.HomePage .ClientTasks .top-nav section {
+  width: 14rem;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #dedede;
+  position: fixed;
+  left: 0;
+  top: 7rem;
+  z-index: 5;
+}
+
+.HomePage .ClientTasks .top-nav section .navigations {
   width: 12rem;
   line-height: 3rem;
   display: flex;
@@ -197,8 +248,14 @@
   align-items: center;
 }
 
-.HomePage .ClientTasks .top-nav .taskInfo{
-  width:100%;
+.HomePage .ClientTasks .top-nav .taskData {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-left: 14rem;
 }
 
 .top-nav a {
@@ -207,51 +264,146 @@
   transition: all 0.8s;
 }
 
-.top-nav a .navigations{
-  color:tomato;
+.top-nav a .navigations {
+  color: black;
 }
 
 .top-nav .activeTasks .navigations {
-  color: black;
-  background-color: whitesmoke;
-  border-bottom: 4px solid tomato;
+  color: tomato;
+  background-color: #cdcdcd;
+  border-radius: 8px;
+  border: 1px solid black;
+  box-shadow: 1px 1px 4px #111;
 }
 
 /* top-nav ended */
 
+.HomePage .connections {
+  width: 100%;
+  height: 100%;
+  background-color: #ededed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
+  overflow: scroll;
+}
+
+.HomePage .connections h1 {
+  position: absolute;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  top: 0;
+  height: 6rem;
+  padding-left: 2rem;
+  background-color: whitesmoke;
+}
+
+.HomePage .connections .block1 {
+  width: 50%;
+  padding: 0.3rem;
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem;
+  background-color: #dedede;
+}
+
+.HomePage .connections .block1 article {
+  margin-left: 3rem;
+}
+
+.HomePage .connections .block1 a {
+  width: 6rem;
+  background-color: black;
+  color: white;
+  line-height: 2.5rem;
+  text-decoration: none;
+  text-align: center;
+  display: block;
+  border-radius: 8px;
+  margin-right: 3rem;
+}
+
 .HomePage .requestPage {
-  margin: 2rem;
+  margin-top: 8rem;
+  margin-left: 2rem;
 }
 
 .HomePage .requestPage ul {
   list-style-type: none;
 }
 
+.HomePage .requestPage ul li {
+  margin: 1rem;
+}
+
+.HomePage .requestPage .left {
+  width: 15rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #111;
+  color: white;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  border: 1px solid black;
+  box-shadow: 1px 1px 4px #222;
+}
+
+.HomePage .requestPage .right {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .HomePage .requestPage form input {
   display: none;
 }
 
+.HomePage .requestPage form h3 {
+  margin-bottom: 2rem;
+}
+
 .HomePage .requestPage form button {
-  width: 6rem;
+  width: 10rem;
   height: 2.5rem;
   border-radius: 6px;
   border: none;
-  background-color: #111;
-  color: white;
-  margin: 2rem;
+  font-weight: bold;
+  font-size: 1rem;
+  font-family: "Ubuntu";
+  color: black;
+  display: block;
+  margin: auto;
+  margin-top: 2rem;
+  cursor: pointer;
+  border: 1px solid black;
+}
+
+.HomePage .requestPage form button:hover {
+  background-color: rgb(255, 77, 46);
+  box-shadow: 1px 1px 4px #111;
 }
 
 .HomePage .requestPage form .AboutTask {
   display: block;
-  width: 14rem;
-  height: 4rem;
-  background-color: #ededed;
-  border: none;
+  width: 20rem;
+  height: 8rem;
+  padding-left: 0.5rem;
+  background-color: #ccc;
+  border: 3px inset #ccc;
+  border-radius: 8px;
   margin: 1rem;
+  color: black;
+  font-size: 1rem;
 }
 
 #TaskName {
-  height: 2rem;
+  height: 3rem;
 }
 
 #TaskDescription {
