--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -411,24 +411,53 @@
   flex-flow: wrap;
 }
 
+.CmessageEntry {
+  width: 100%;
+  height: 100%;
+  background-color: #ededed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.CmessageEntry .block {
+  background-color: #dedede;
+  border-radius: 8px;
+}
+
+.CmessageEntry .block h2 {
+  line-height: 3rem;
+  padding: 0.5rem;
+}
+
+.CmessageEntry .block form {
+  width: 100%;
+  display: flex;
+  justify-content: right;
+  background-color: rgb(240, 240, 240);
+}
+
 .CmessageDisplay {
-  width: 30rem;
-  height: 20rem;
+  width: 40rem;
+  height: 25rem;
   overflow-y: scroll;
   background-color: rgb(240, 240, 240);
 }
 .CmessageEntry input {
   border: none;
-  background-color: aliceblue;
-  width: 12rem;
-  height: 2rem;
+  background-color: #dedede;
+  width: 20rem;
+  line-height: 2rem;
   padding: 0.2rem;
+  padding-left: 0.5rem;
 }
 .CmessageEntry button {
   border: none;
   width: 4rem;
-  height: 2rem;
+  line-height: 2rem;
   padding: 0.2rem;
+  background-color: #111;
+  color: white;
 }
 .CmessageDisplay .clientMsg {
   width: 10rem;
